# docs/swagger.json
@@ -1,22 +1,18 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
-        "title": "Swagger Example API",
+        "description": "DITS test FilmTracker project.",
+        "title": "FilmTracker API",
         "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
+        "contact": {},
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0"
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
+    "host": "localhost:5555",
+    "basePath": "{{.BasePath}}",
     "paths": {
         "/testapi/get-string-by-int/{some_id}": {
             "get": {
@@ -80,6 +76,47 @@
                     }
                 }
             }
+        },
+        "/users/auth/signout/": {
+            "get": {
+                "description": "Sign Out from server, delete cookies",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Sign Out",
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":\"Sign Out\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "406": {
+                        "description": "{\"error\":\"http: named cookie not present\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Refresh": {
+            "type": "apiKey",
+            "name": "Refresh",
+            "in": "cookies"
+        },
+        "Token": {
+            "type": "apiKey",
+            "name": "Token",
+            "in": "cookies"
         }
     }
 }
